Allow ExecuteCommand to be a user gesture.

ExecuteCommand actions delivered from the browser should be considered
user gestures.

BUG=765266

Change-Id: I022940581c964f0b132ad285432902a3d9351325